feat: develop auth
